[package]
name = "cobapi"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# engage = { version = "0.9.0", git = "https://github.com/DivineDragonFanClub/engage" }
[dependencies]
engage = { git = "https://github.com/atarng/engage", branch="call_lua_from_code" }
